--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -20,14 +20,15 @@ p {
 header {
   background-color: $primary-color;
   height: 5vh;
+  padding: 0 5%;
   display: flex;
   align-items: center;
   justify-content: center;
   p {
     color: white;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: clamp(0.9rem, 2.5vw, 1.125rem);
+    line-height: 1.2;
     letter-spacing: 0em;
   }
 }
@@ -59,14 +60,21 @@ header {
     max-width: 1400px;
     height: 100%;
     padding: 5%;
+    @media (max-width: 768px) {
+      padding: 10%;
+      img {
+        max-width: 30vw;
+        height: auto;
+      }
+    }
     h1 {
       font-weight: 400;
       font-style: normal;
       color: white;
       font-kerning: none;
       text-decoration: none;
-      font-size: 70px;
-      line-height: 77px;
+      font-size: clamp(2rem, 13vw, 4.375rem);
+      line-height: 1.2;
       letter-spacing: -0.04em;
       text-align: left;
       span {
@@ -98,8 +106,8 @@ header {
         font-style: normal;
         color: $primary-color;
         font-kerning: none;
-        font-size: 61px;
-        line-height: 66px;
+        font-size: clamp(2.5rem, 4vw, 3.8125rem);
+        line-height: clamp(3rem, 5vw, 4.125rem);
         letter-spacing: -0.05em;
       }
       h3 {
@@ -107,8 +115,8 @@ header {
         font-weight: 400;
         font-kerning: none;
         text-decoration: none;
-        font-size: 32px;
-        line-height: 34px;
+        font-size: clamp(1.5rem, 3vw, 2rem);
+        line-height: clamp(1.75rem, 3.5vw, 2.125rem);
         letter-spacing: -0.05em;
       }
     }
@@ -126,24 +134,28 @@ header {
           gap: 4px;
           color: $primary-color;
           font-weight: 500;
-          font-size: 27px;
-          line-height: 26px;
+          font-size: clamp(1.25rem, 3vw, 1.6875rem);
+          line-height: clamp(1.5rem, 3.5vw, 1.625rem);
           letter-spacing: -0.05em;
           h3 {
             font-weight: 500 !important;
-            font-size: 27px !important;
+            font-size: clamp(1.25rem, 3vw, 1.6875rem) !important;
           }
         }
-        video {
-          width: 100%;
-          height: auto;
+        .video-container {
+          overflow: hidden;
           aspect-ratio: 16 / 9;
+          video {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+          }
         }
         h4 {
           color: black;
           font-weight: 400;
-          font-size: 17px;
-          line-height: 22px;
+          font-size: clamp(0.9375rem, 2vw, 1.0625rem);
+          line-height: clamp(1.25rem, 2.5vw, 1.375rem);
           letter-spacing: 0em;
         }
       }
@@ -175,6 +187,9 @@ header {
     padding: 5%;
     margin: 0 auto;
     gap: 100px;
+    @media (max-width: 1200px) {
+      gap: 25px;
+    }
     .message {
       display: flex;
       flex-direction: column;
@@ -182,15 +197,15 @@ header {
       h2 {
         color: white;
         font-weight: 400;
-        font-size: 64px;
-        line-height: 89px;
+        font-size: clamp(2.5rem, 15vw, 4rem);
+        line-height: clamp(3.5rem, 6vw, 5.5625rem);
         letter-spacing: -0.02em;
       }
       h3 {
         color: white;
         font-weight: 400;
-        font-size: 24px;
-        line-height: 33px;
+        font-size: clamp(1.4rem, 3vw, 1.5rem);
+        line-height: 1.2;
         letter-spacing: 0em;
       }
     }
@@ -201,17 +216,17 @@ header {
       gap: 16px;
       .item {
         display: flex;
-        padding: 16px;
-        width: 100%;
-        border-radius: 40px;
-        color: white;
-        font-size: 24px;
-        line-height: 33px;
-        letter-spacing: 0em;
-        border: 1px solid white;
         align-items: center;
         justify-content: center;
         text-align: center;
+        padding: 16px 24px;
+        border-radius: 50px;
+        color: white;
+        font-size: clamp(1.2rem, 3.5vw, 1.4rem);
+        line-height: 1.2;
+        letter-spacing: 0em;
+        border: 1px solid white;
+        height: 80px;
       }
     }
   }
@@ -228,12 +243,15 @@ header {
     max-width: 1400px;
     margin: 0 auto;
     justify-content: center;
-    padding: 5%;
+    padding: 10% 5%;
+    @media (max-width: 1200px) {
+      gap: 50px;
+    }
     h3 {
       font-weight: 400;
       color: black;
-      font-size: 64px;
-      line-height: 89px;
+      font-size: clamp(3.1rem, 5vw, 4rem);
+      line-height: 1.2;
       letter-spacing: -0.02em;
       text-align: left;
     }
@@ -241,9 +259,16 @@ header {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 40px;
+      justify-items: center;
       align-items: center;
+      @media (max-width: 1250px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 768px) {
+        display: none !important;
+      }
       img {
-        width: 100%;
+        max-height: 70px;
         height: auto;
         max-width: 200px;
       }
@@ -270,7 +295,7 @@ footer {
     color: white;
     max-width: 1400px;
     height: 100%;
-    padding: 10% 5%;
+    padding: 15% 5%;
     margin: 0 auto;
     gap: 20px;
     justify-content: space-between;
@@ -284,19 +309,25 @@ footer {
       gap: 20px;
       h4 {
         font-weight: 400;
-        font-size: 59px;
-        line-height: 67px;
+        font-size: clamp(3rem, 4.5vw, 3.6875rem);
+        line-height: 1.2;
         letter-spacing: -0.02em;
         margin-bottom: 40px !important;
+        @media (max-width: 1200px) {
+          margin-bottom: 20px !important;
+        }
       }
       .sec {
         display: flex;
         flex-direction: column;
         gap: 8px;
+        @media (max-width: 1200px) {
+          gap: 2px;
+        }
         .item {
           color: white;
-          font-size: 23px;
-          line-height: 31px;
+          font-size: clamp(1.25rem, 3vw, 1.4375rem);
+          line-height: clamp(1.75rem, 3.5vw, 1.9375rem);
           letter-spacing: 0em;
           white-space: nowrap;
           font-weight: 200;
@@ -317,6 +348,33 @@ footer {
         img {
           max-width: 44px;
         }
+      }
+    }
+  }
+}
+
+.swiper {
+  width: 100%;
+  height: auto;
+  position: relative;
+  @media (min-width: 768px) {
+    display: none !important;
+  }
+
+  .swiper-wrapper {
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: auto;
+      transition: transform 0.3s ease;
+
+      img {
+        height: 80px;
+        width: auto;
+        object-fit: contain;
+        max-width: 250px;
       }
     }
   }
