--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import 'aos/dist/aos.css';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -12,6 +16,10 @@
 	</head>
 	<body>
 		<slot />
+		<script>
+			import AOS from "aos";
+			AOS.init();
+		</script>
 	</body>
 </html>
 
