Update Carousel and Welcome components; improve image alt text and layout styles

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -31,7 +31,7 @@ import Carousel from './Carousel.astro';
   </video>
 
   <section data-aos="fade-up" data-aos-duration="2000" id="hero">
-    <img src={dugaluLogo.src} width="145" height="45" alt="Astro Homepage" />
+    <img src={dugaluLogo.src} width="145" height="45" alt="Dugalu Icon" />
     <h1>Somos una compañía especializada en <span>marketing</span>, ventas & tecnología. </h1>
     <div/>
   </section>
