--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -6,7 +6,7 @@ const { images } = Astro.props;
   <div class="swiper-wrapper">
     {images.map((image) => (
       <div class="swiper-slide">
-        <img src={image.src} alt={image.alt} />
+        <img src={image.src} alt="Swiper Image" />
       </div>
     ))}
   </div>
@@ -25,11 +25,5 @@ const { images } = Astro.props;
     },
     loop: true,
     speed: 2000,
-    breakpoints: {
-      768: {
-        slidesPerView: 3,
-        spaceBetween: 20,
-      },
-    },
   });
 </script>
