--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import 'aos/dist/aos.css';
 ---
 
 <!doctype html>
@@ -22,18 +23,12 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" media="print" onload="this.media='all'">
-		<noscript>
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
-		</noscript>
 	</head>
 	<body>
 		<slot />
-		<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
-		<script defer>
-			document.addEventListener('DOMContentLoaded', () => {
-				AOS.init();
-			});
+		<script>
+			import AOS from "aos";
+			AOS.init();
 		</script>
 	</body>
 </html>
