--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -13,7 +13,7 @@ import segurosMundial from '../assets/images/clients/seguros-mundial.png'
 import '../styles/Welcome.scss';
 import backgroundVideo3 from '../assets/videos/footer-video.mp4';
 import whatsapp from '../assets/images/socials/whatsapp.png';
-import instagram from '../assets/images/socials/whatsapp.png';
+import instagram from '../assets/images/socials/instagram.svg';
 import sales from '../assets/videos/sales.mp4';
 import marketing from '../assets/videos/marketing.mp4';
 import technology from '../assets/videos/technology.mp4';
