Refactor Welcome component styles; adjust header and footer dimensions, improve layout consistency, and enhance image class usage

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -131,7 +131,7 @@ import Carousel from './Carousel.astro';
       <img data-aos="fade-up" data-aos-delay="100" src={manuelita.src} alt="Manuelita" />
       <img data-aos="fade-up" data-aos-delay="200" src={segurosMundial.src} alt="Seguros Mundial" />
       <img data-aos="fade-up" data-aos-delay="300" src={dinant.src} alt="Dinant" />
-      <img data-aos="fade-up" data-aos-delay="400" src={adea.src} alt="Adea" />
+      <img class="adea" data-aos="fade-up" data-aos-delay="400" src={adea.src} alt="Adea" />
       <img data-aos="fade-up" data-aos-delay="100" src={detektor.src} alt="Detektor" />  
       <img data-aos="fade-up" data-aos-delay="200" src={indumil.src} alt="Indumil" />
       <img data-aos="fade-up" data-aos-delay="300" src={prolibu.src} alt="Prolibu" />
