Refactor Welcome component styles; adjust header height, banner min-height, and item gaps for improved layout consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -32,6 +32,7 @@ import Carousel from './Carousel.astro';
 
   <section data-aos="fade-up" data-aos-duration="2000" id="hero">
     <img src={dugaluLogo.src} width="145" height="48.4949" alt="Dugalu Icon" />
+    <div/>
     <h1>Somos una compañía especializada en <span>marketing</span>, ventas & tecnología. </h1>
     <div/>
   </section>
@@ -110,16 +111,16 @@ import Carousel from './Carousel.astro';
         grandes empresas de diversos sectores en Estados Unidos y LATAM. 
       </h3>
     </div>
-    <div class="items">
-      <div class="item" data-aos="fade-right" data-aos-delay="300">Consultoría y acompañamiento estratégico</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="200">Inbound Marketing</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="100">Pauta Digital</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="600">Influencer Marketing</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="500">Diseño UX - UI</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="400">Ingeniería web</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="900">Estructuración proceso de ventas</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="800">Capacitación equipo de ventas</div>
-      <div class="item" data-aos="fade-right" data-aos-delay="700">Automatización</div>
+    <div class="items" data-aos="fade-right" data-aos-duration="2000">
+      <div class="item">Consultoría y acompañamiento estratégico</div>
+      <div class="item">Inbound Marketing</div>
+      <div class="item">Pauta Digital</div>
+      <div class="item">Influencer Marketing</div>
+      <div class="item">Diseño UX - UI</div>
+      <div class="item">Ingeniería web</div>
+      <div class="item">Estructuración proceso de ventas</div>
+      <div class="item">Capacitación equipo de ventas</div>
+      <div class="item">Automatización</div>
     </div>
   </div>
 </div>
