--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -59,7 +59,7 @@ header {
     color: white;
     max-width: 1400px;
     height: 100%;
-    padding: 10% 7%;
+    padding: 4% 7% 10% 7%;
     width: 100%;
     @media (max-width: 768px) {
       padding: 10% 7%;
@@ -94,7 +94,7 @@ header {
   .content {
     display: flex;
     flex-direction: column;
-    gap: 70px;
+    gap: 90px;
     max-width: 1400px;
     margin: 0 auto;
     align-items: center;
@@ -140,12 +140,12 @@ header {
           flex-direction: column;
           gap: 4px;
           color: $primary-color;
-          font-weight: 400;
+          font-weight: 300;
           font-size: clamp(1.25rem, 3vw, 1.6875rem);
           line-height: clamp(1.5rem, 3.5vw, 1.625rem);
           letter-spacing: -0.05em;
           h3 {
-            font-weight: 500 !important;
+            font-weight: 300 !important;
             font-size: clamp(1.25rem, 3vw, 1.6875rem) !important;
           }
         }
