--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -79,6 +79,7 @@ header {
       letter-spacing: -0.04em;
       text-align: left;
       max-width: 1100px;
+      margin-top: 35px !important;
       span {
         color: $primary-color;
       }
