--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -102,6 +102,9 @@ header {
     justify-content: center;
     padding: 5% 7%;
     width: 100%;
+    @media (max-width: 768px) {
+      padding: 15% 7%;
+    }
     .message {
       display: flex;
       flex-direction: column;
@@ -199,11 +202,12 @@ header {
     width: 100%;
     @media (max-width: 1200px) {
       gap: 25px;
+      padding: 15% 7%;
     }
     .message {
       display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 70px;
       width: 100%;
       h2 {
         color: white;
@@ -262,7 +266,8 @@ header {
     justify-content: center;
     padding: 7% 7% 13% 7%;
     @media (max-width: 1200px) {
-      gap: 50px;
+      gap: 100px;
+      padding: 15% 7%;
     }
     h3 {
       font-weight: 400;
@@ -318,7 +323,7 @@ footer {
     width: 100%;
     @media (max-width: 1200px) {
       flex-wrap: wrap;
-      padding: 20% 7% 40% 7%;
+      padding: 30% 7% 30% 7%;
     }
     .footer-items {
       display: flex;
